--- a/index.html
+++ b/index.html
@@ -257,11 +257,11 @@ body
         }
         .background {
             position: absolute;
-            top: 0;
+            top: -2;
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('https://u.cubeupload.com/extralux/nova713.png'); /* Sostituisci con il tuo link */
+            background-image: url('https://i.ibb.co/s5hMxrT/nova73.webp'); /* Sostituisci con il tuo link */
             background-repeat: no-repeat;
   background-position: top center;
   position: relative;  
@@ -289,7 +289,20 @@ body
         }
         .container:hover .center-image {
             animation: lamp-effect 1s forwards; /* Attiva l'animazione quando il mouse passa sopra */
-        }
+}
+#staklo {   
+font-family: 'Reem Kufi', MS Serif;
+			text-align: center;
+			position: fixed;
+			left: 50%;
+			top: 541px;
+			transform: translate(-50%, -50%);
+			margin: -0.40px;
+			z-index: 5;
+			background-color: #00000000;
+			border:0px solid transparent;
+text-align:center;
+}
 
 	</style>
 </head>
@@ -317,6 +330,12 @@ body
     <img src="https://i.imgur.com/jRjXUSt.png" class="ghost1">
     <img src="https://i.imgur.com/h01n9J2.png" class="ghost2">
   </section>
+  	  </div>
+</div>
+<div id="staklo"> 
+<div>
+<img src="https://i.ibb.co/VLf3yNL/tamnostaklo-produzena2320x1080.webp"
+</div>
 </body>
   <canvas></canvas>
     <script>
